Доработки сетевого слоя
